workspace-sf/force-app/main/default/objects/GarantiaRelacionada__c/GarantiaRelacionada__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as garantias dependentes de outra garantia</description>
    <label>Garantia relacionada</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantias relacionadas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>