workspace-sf/force-app/main/default/objects/GarantiaRelacionada__c/fields/Acumulativa__c.field-meta.xml
<CustomField>
    <fullName>Acumulativa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acumulativa</label>
    <type>Checkbox</type>
</CustomField>