workspace-sf/force-app/main/default/objects/GarantiaRelacionada__c/fields/Dependencia__c.field-meta.xml
<CustomField>
    <fullName>Dependencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependência</label>
    <type>Checkbox</type>
</CustomField>