workspace-sf/force-app/main/default/objects/GarantiaRelacionada__c/fields/GarantiaRelacionada__c.field-meta.xml
<CustomField>
    <fullName>GarantiaRelacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia Relacionada</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.GarantiaProduto__c</field>
            <operation>notEqual</operation>
            <valueField>GarantiaProduto__c.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GarantiaProduto__c</referenceTo>
    <relationshipLabel>Garantias relacionadas (Garantia Relacionada)</relationshipLabel>
    <relationshipName>Garantias_relacionadas</relationshipName>
    <type>Lookup</type>
</CustomField>