workspace-sf/force-app/main/default/objects/GarantiaRelacionada__c/fields/Incremento__c.field-meta.xml
<CustomField>
    <fullName>Incremento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incremento</label>
    <type>Checkbox</type>
</CustomField>