workspace-sf/force-app/main/default/objects/GarantiaRelacionada__c/fields/TipoDependencia__c.field-meta.xml
<CustomField>
    <fullName>TipoDependencia__c</fullName>
    <label>Tipo de dependência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Includente</fullName>
            </value>
            <value>
                <fullName>Excludente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>