workspace-sf/force-app/main/default/objects/GarantiaRelacionada__c/validationRules/ComparacaoGarantiaProduto.validationRule-meta.xml
<ValidationRule>
    <fullName>ComparacaoGarantiaProduto</fullName>
    <active>false</active>
    <description>Valida se o Id da Garantia do produto é igual ao da garantia relacionada</description>
    <errorConditionFormula>GarantiaProduto__r.Produto__c   &lt;&gt;  GarantiaRelacionada__r.Produto__c</errorConditionFormula>
    <errorMessage>Selecione uma garantia do mesmo produto.</errorMessage>
</ValidationRule>